# algorithms

./: .gitignore  CMakeLists.txt  CMakePresets.json  Definitions.cmake  README.md  ToDo.txt  search_and_fix_missing_includes.py  search_missing_includes.py
arrays_and_strings/: CMakeLists.txt  one_edit_away_1_5.cpp  palindrome_permutation_1_4.cpp  rotate_matrix_1_7.cpp  string_compression_1_6.cpp  string_consists_of_unique_characters_1_1.cpp  string_permutation_1_2.cpp  string_rotation_1_9.cpp  urlify_string_1_3.cpp  zero_matrix_1_8.cpp
backtracking/: CMakeLists.txt  ToDo.txt  binary_tree_paths.h  compute_all_permutations.h  construct_lexicographically_largest_sequence.h  construct_powerset.h  find_all_summand_combinations_for_sum.h  find_sum_combinations.h  generate_all_combinations_of_size_k.h  generate_all_subsets_of_size_k.h  letter_combinations_of_phone_numbers.h  main.cpp  path_sum_binary_tree.h  queens_problem.h  search_word_in_character_grid.h  subsets_with_duplicates.h  sudoko_solver.h  target_sum_ways.h
binary_search/: CMakeLists.txt  ToDo.txt  binary_search.h  construct_bounded_array_with_max_at_index.h  count_words_that_are_subsequences_in_given_string.h  find_element_index_in_rotated_array.h  find_kth_smallest_distance.h  first_appearance_in_sorted_vector.h  kth_missing_element.h  last_appearance_in_sorted_vector.h  main.cpp  median_of_two_sorted_arrays.h  minimum_car_size_to_ship_packages.h  minimum_number_of_days.h  minimum_speed_to_eat_bananas_in_n_hours.h  minimum_time_to_schedule_n_bus_trips.h  range_sum_of_sorted_subarrays.h  search_for_range.h  search_in_rotated_sorted_array.h  search_sorted_2d_matrix.h  search_suggestion_system.h  used_concepts.h
bit_manipulation/: CMakeLists.txt  ToDo.txt  basic_bit_operations.h  bitwise_and_numbers_in_range.h  can_array_be_sorted.h  count_operations_to_make_xor_of_array_equal_k.h  counting_bits.h  double_number_to_binary.h  find_longest_substring_with_even_vowl_count.h  find_original_array_XOR.h  find_two_singular_elements.h  find_unique_number_in_arrays.h  insert_bit_sequence_into_bitstring.h  insert_bits.h  integer_division.h  longest_bit_sequence_with_flip.h  longest_combination_with_bitwise_and.h  main.cpp  sort_according_to_hamming_weight.h  sum_all_xor_subsets.h  xor_queries_for_subarrays.h
cache_latency/: CMakeLists.txt  cache_latency_laptop.cpp
dynamic_programming/: CMakeLists.txt  NotesOnDP.md  ToDo.txt  can_reach_last_index.h  coin_change.h  coin_combinations.h  count_number_of_valid_triples.h  count_palindromic_substrings.h  count_unique_binary_search_trees.h  count_ways_2D_grid.h  cutting_rod_problem.h  fibonacci_numbers.h  jumps.h  knapsack_problem.h  largest_divisible_subset.h  length_of_longest_palindromic_subsequence.h  longest_common_subsequence.h  longest_common_substring.h  longest_ideal_string_subsequence.h  longest_increasing_subsequence.h  longest_palindromic_substring.h  longest_string_chain.h  main.cpp  matrix_chain_multiplication.h  max_profit_in_job_scheduling.h  maximize_index_value_pair.h  maximize_product_from_given_target.h  maximum_length_of_same_subarray_in_two_arrays.h  maximum_number_of_points_with_costs.h  maximum_number_of_uncrossing_lines.h  maximum_points_solved_with_brain_power.h  maximum_subarray_kadane_algorithm.h  maximum_sum_of_array_no_adjacent_elements.h  min_costs_to_reach_end.cpp  min_costs_to_reach_end.h  min_jumps_to_last_index.cpp  min_jumps_to_last_index.h  minimal_height_book_shelves.h  minimal_jumps_to_last_index.h  minimal_operations_to_create_valid_string.h  (+18 more)
fun_with_algos/: CMakeLists.txt  ToDo.md  ToDo.mytxt  can_attend_all_meetings.h  can_reach_last_index.h  candy_for_children_grades.h  count_price_spikes.h  dropped_requests.h  execute_processes.h  find_all_duplicates_in_array.h  find_duplicate_in_array.h  find_first_missing_positive.h  find_original_array_from_doubled_array.h  find_pivot_integer.h  find_review_score.h  flip_columns_to_maximize_equal_rows.h  four_sum.h  get_majority_element.h  greatest_common_divisor.h  hiring_candidates.h  insert_interval.h  interval_map.h  interval_map2.h  interval_merging.h  is_dna_sequence_similar.h  island_perimeter.h  largest_extremum_index_gap .h  largest_integer_with_its_negative.h  largest_min_max_index_gap .h  largest_submatrix_by_moving_columns.h  logger_rate_limiter.h  main.cpp  max_number_of_diff_elements.h  maximum_difference.h  maximum_distance_in_arrays.h  maximum_matrix_sum.h  maximum_subarray_kadane_algorithm.h  mean_rank_count.h  min_cost_to_add_roads.h  min_swaps_for_palindrome.h  (+25 more)
fun_with_strings/: CMakeLists.txt  ToDo.txt  are_permutations.h  are_strings_equal_upto_rotation.h  are_two_strings_close.h  are_two_strings_one_edit_away.h  compare_version_numbers.h  count_beautiful_substrings.h  count_steps_to_make_strings_anagram.h  create_ranges_from_sorted_array.h  decode_string.h  decode_string_at_index.h  design_in_memory_file_system.h  has_only_unique_characters.h  is_palindrom_permutation.h  is_rotated_string.h  knuth_morris_pratt_algo.h  levenshtein_distance.h  longest_palindrome_from_two_letter_words.h  maximize_difference_by_replacing_digits.h  minimum_deletion_to_make_string_special.h  minimum_length_after_removing_substrings.h  permutation_included_in_string.h  remove_duplicate_letters.h  reorder_log_files.h  sentence_similarity.h  sort_string_by_character_frequency.h  steps_to_make_two_equal_sized_strings_an_anagram.h  string_compression.h  test_is_palindrom_permutation.cpp  urlify_string.h
linked_lists/: CMakeLists.txt  kth_to_last_2_2.cpp  main.cpp  partition_2_4.cpp  remove_duplicates_2_1.cpp  reverse_linked_list.h  reverse_linked_list_between_positions.h  revert_linked_list.h  simple_single_linked_list.h  simple_sinlge_linked_list.h
prefix_sums/: CMakeLists.txt  contiguous_array.h  contineous_subarray_sum.h  count_subarrays_with_odd_sum.h  count_substrings_with_dominant_ones.h  find_longest_contiguous_subarray.h  increment_sub_matrices.h  k_radius_subarray_averages.h  main.cpp  make_divisible_by_value.h  number_of_sub_matrices_that_sum_to_target.h  number_of_subarrays.h  rob_banks.cpp  (+5 more)
(+1110 files in other folders)
