cmake_minimum_required(VERSION 3.20)
project(arrays_and_strings)

set(CMAKE_CXX_STANDARD 14)

add_executable(unique string_consists_of_unique_characters_1_1.cpp)
add_executable(permutation string_permutation_1_2.cpp)
add_executable(urlify urlify_string_1_3.cpp)
add_executable(palindrome palindrome_permutation_1_4.cpp)
add_executable(one_away one_edit_away_1_5.cpp)
add_executable(string_compression string_compression_1_6.cpp)
add_executable(rotate_matrix rotate_matrix_1_7.cpp)
add_executable(zero_matrix zero_matrix_1_8.cpp)