add_executable(urlify urlify_string_1_3.cpp)
add_executable(palindrome palindrome_permutation_1_4.cpp)
add_executable(one_away one_edit_away_1_5.cpp)
add_executable(string_compression string_compression_1_6.cpp)
add_executable(rotate_matrix rotate_matrix_1_7.cpp)
add_executable(zero_matrix zero_matrix_1_8.cpp)
add_executable(string_rotation string_rotation_1_9.cpp)