cmake_minimum_required(VERSION 3.20)
project(recursion_and_dynamic_programming)
set(CMAKE_CXX_STANDARD 14)

add_executable(steps steps_8_1.cpp)
add_executable(robot robot_8_2.cpp)
add_executable(magic_index magic_index_8_3.cpp)
add_executable(subsets subset_8_4.cpp)
add_executable(multiply recursive_multiply_8_5.cpp)