cmake_minimum_required(VERSION 3.20)
project(stacks_and_queues)

set(CMAKE_CXX_STANDARD 14)

add_executable(stack_min stack_min_3_2.cpp)
add_executable(set_of_stacks set_of_stacks_3_3.cpp)
add_executable(queue_via_stack queue_via_stack_3_4.cpp)
add_executable(sort_stack sort_stack_3_5.cpp)
add_executable(animal_shelter animal_shelter_3_6.cpp)